2009-05-28  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp (html_object_get_property): no need to
	introduce the extra temporary here.
	(html_object_invoke): same.
	(html_object_invoke_self): same.

2009-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Sprinkle SetCurrentDeployment.

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp|h: Ensure we only emit the source progress/completed events
	on the source, and not on the source splash ourself.  Also, we need to make
	sure we have a toplevel before emitting otherwise sender is null going to the
	js event.

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp|h:
	* plugin-class.cpp|h|h.in: Support the splash screen progress/completed events
	* cbinding.h: regen

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp: Avoid a double-delete of the splash xaml_loader

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp|h: Support splash screen.

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* plugin.cpp|h: Ensure we spin up a default application for the xaml
	case as well since <Canvas><StackPanel /></Canvas> works.

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-downloader.h:
	* plugin-downloader.cpp: Add support for retrieving response headers
	  and disable cache.

	* cbinding.h: Regenerated.

	* browser-bridge.h: Updated according to downloader API changes.

	* plugin.mdp: Updated.

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-downloader.cpp: Don't hard code the verb.

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp (value_to_variant): robustify this and support
	NULL Value*'s.  Fixes crash in DRT #485.

2009-05-23  Chris Toshok  <toshok@ximian.com>

	* plugin-class.cpp, plugin-class.h: add a Control plugin class,
	which exposes "focus".  Should get DRT #250 a little further (and
	keep it from timing out.)

2009-05-21  Rusty Howell  <rhowell@novell.com>
